<resources>
    <string name="app_name">WeatherApplication</string>
    <string name="action_settings">Settings</string>
    <string name="remove_item">Remove Item</string>
    <string name="select_all">Select All</string>
    <string name="weather_data_temp_key">Temperature</string>
    <string name="weather_data_location_key">Location</string>
    <string name="add_city_done_button">Done</string>
    <string name="add_city_cancel_button">Cancel</string>
    <string name="duplicate_city_error_message">The weather for that location is already being displayed</string>
    <string name="invalid_character_error_message">You have typed in an invalid character, please try again</string>
    <string name="city_not_found_error_message">You have typed in an invalid city, please try again</string>
    <string name="add_city_dialog_hint">Enter city</string>
    <string name="add_city_dialog_cancel_btn">CANCEL</string>
    <string name="add_city_dialog_submit_btn">ADD</string>
    <string name="action_delete">Delete</string>
</resources>
