<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.weatherapplication.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_item"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/remove_item"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/select_all"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/select_all"
        app:showAsAction="ifRoom" />

</menu>
